# bacnet_ex

./: .gitignore  .iex.exs  CMakeLists.txt  README.md  bacnet-stack  mix.exs
.github/workflows/: ci.yml
karg/: CMakeLists.txt  bacnet-stackTargets.cmake
karg/src/bacnet/basic/object/: device.c  device.h  routed_analog_input.h  routed_multistate_input.h  routed_object.c
karg/src/bacnet/basic/object/gateway/: gw_device.c
karg/src/bacnet/datalink/: dlenv.c
lib/: bacnet.ex  bacnet_udp.ex
lib/bacnet/: application.ex  gateway.ex  heartbeat.ex  logger.ex
lib/bacnet/gateway/: object.ex
lib/bacnet_udp/: helper.ex
patches/: 0001-Add-Model-and-Application-Software-Version-to-routed.patch  0002-Do-not-interpret-a-zero-d-out-device-in-a-static-lis.patch  0003-Remove-unnecessary-debug-logs-to-stderr.patch  0004-Add-configurable-vendor-name-support.patch  0005-Add-routed-analog-input-object-support.patch  0006-Add-routed-multistate-input-object-support.patch  0007-Allow-BACNET_PROTOCOL_REVISION-to-be-set-by-user.patch  0008-Exclude-object-identifier-from-the-common-prop-list.patch  0009-Set-description-and-name-when-creating-input-objs.patch
spec/: bacnet_spec.exs
src/: arg.c  arg.h  bacnet.c  bacnet.h  ei_client.c  ei_client.h  ei_heartbeat.c  ei_heartbeat.h  ei_log.c  ei_log.h  log.c  log.h  main.c  port.c  port.h
src/bacnet/basic/object/: device.h  routed_analog_input.c  routed_multistate_input.c  routed_object.h
src/object/: binary_input.c  binary_input.h  characterstring_value.c  characterstring_value.h  command.c  command.h  common.h
src/protocol/: decode_call.c  decode_call.h  enum.c  enum.h  event.c  event.h
